[fix] temporary hardfix the flex gap

--- a/frontend/public/static/global.css
+++ b/frontend/public/static/global.css
@@ -4,11 +4,9 @@
 }
 
 html, body {
-	position: relative;
-	width: 100%;
+	min-height: 100%;
 	height: 100%;
 }
-
 body {
 	color: #333;
 	margin: 0;
